# cpp-cicd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main  main.cpp
include/: consumer.h  producer.h  provider.h
source/: CMakeLists.txt  consumer.cpp  main.cpp  producer.cpp  provider.cpp
test/: CMakeLists.txt  test.cpp
